--- a/gb/21/10/16/n13308435.md
+++ b/gb/21/10/16/n13308435.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lgxdpm367/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lgxdpm367/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lgxdpm367/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lgxdpm367/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lgxdpm367/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lgxdpm367/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lgxdpm367/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lgxdpm367/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lgxdpm367/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lgxdpm367/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lgxdpm367/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lgxdpm367/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lgxdpm367/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lgxdpm367/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lgxdpm367/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>实用的开锅养锅秘诀 铸铁锅也能变身不沾锅</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13308495-shutterstock_254978596-600x400.jpg" />
 <h6>噗鼻焦香尽在铸铁锅里，正确养锅能为好锅加分。（Shutterstock）
 </h6>
 <hr>
-	<p>【大纪元2021年10月16日讯】一只好锅能为厨艺加分。<ahref="https://github.com/lgxdpm367/djy/blob/master/gb/tag/%E9%93%B8%E9%93%81%E9%94%85.md#1">铸铁锅</a>料理简单做又好吃，能媲美餐厅煎出外层焦香内软多汁的牛排，或仿似中菜大厨快炒的青脆蔬菜，有时也想试试“<ahref="https://github.com/lgxdpm367/djy/blob/master/gb/tag/%E9%93%81%E6%9D%BF%E7%83%A7.md#1">铁板烧</a>”料理，烤面包，做点心……无涂层的<ahref="https://github.com/lgxdpm367/djy/blob/master/gb/tag/%E9%93%B8%E9%93%81%E9%94%85.md#1">铸铁锅</a>就是最佳选择，只要几道“<ahref="https://github.com/lgxdpm367/djy/blob/master/gb/tag/%E5%85%BB%E9%94%85.md#1">养锅</a>”程序，也能变身为不沾锅。</p>
+	<p>【大纪元2021年10月16日讯】一只好锅能为厨艺加分。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%93%B8%E9%93%81%E9%94%85.md#1">铸铁锅</a>料理简单做又好吃，能媲美餐厅煎出外层焦香内软多汁的牛排，或仿似中菜大厨快炒的青脆蔬菜，有时也想试试“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%93%81%E6%9D%BF%E7%83%A7.md#1">铁板烧</a>”料理，烤面包，做点心……无涂层的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%93%B8%E9%93%81%E9%94%85.md#1">铸铁锅</a>就是最佳选择，只要几道“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%BB%E9%94%85.md#1">养锅</a>”程序，也能变身为不沾锅。</p>
 <p>许多热爱露营、野炊活动的朋友们喜欢带上厚重的铸铁“荷兰锅”，直接将锅具放在火堆上煮食，锅身很厚，盖上铸铁锅盖，高温瞬间封住食物原味，特别好吃。轻松做出随性的野味和朴实原味是铸铁锅独有的特点。</p>
 <figure id="attachment_13308502" aria-describedby="caption-attachment-13308502" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13308502-shutterstock_700811236.jpg"><img class="size-large wp-image-13308502" src="https://i.epochtimes.com/assets/uploads/2021/10/id13308502-shutterstock_700811236-600x399.jpg" alt="Dutch,Oven,Cooking,Over,A,Campfire,Shutterstock,铸铁锅,荷兰锅" width="600" b="399" /></a><figcaption id="caption-attachment-13308502" class="wp-caption-text">“荷兰锅”是铸铁汤锅款式，可直接火烤。（Shutterstock）</figcaption></figure>
 <figure id="attachment_13308509" aria-describedby="caption-attachment-13308509" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13308509-shutterstock_1372896188.jpg"><img class="size-large wp-image-13308509" src="https://i.epochtimes.com/assets/uploads/2021/10/id13308509-shutterstock_1372896188-600x400.jpg" alt="Preparing,Food,On,Campfire,In,Wild,Camping.,The,Cooking,Of,Shutterstock,铸铁锅" width="600" b="400" /></a><figcaption id="caption-attachment-13308509" class="wp-caption-text">用铸铁锅做野炊料理，特别美味。（Shutterstock）</figcaption></figure>
-<p>用铸铁锅做料理不须太讲究技巧，只要掌握火侯和时间，食材简单却让人惊艳，因此许多人对它“爱不释手”，“收藏”了各式铸铁锅具。平时使用后按照下面介绍的技巧“<ahref="https://github.com/lgxdpm367/djy/blob/master/gb/tag/%E5%85%BB%E9%94%85.md#1">养锅</a>”，注意正确的使用方法，坚固耐用的铸铁锅也能做为“传家宝”。</p>
+<p>用铸铁锅做料理不须太讲究技巧，只要掌握火侯和时间，食材简单却让人惊艳，因此许多人对它“爱不释手”，“收藏”了各式铸铁锅具。平时使用后按照下面介绍的技巧“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%BB%E9%94%85.md#1">养锅</a>”，注意正确的使用方法，坚固耐用的铸铁锅也能做为“传家宝”。</p>
 <h2><strong><span style="color: #800080;">★ 铸铁锅的优点</span></strong></h2>
 <p>起源于中古世纪欧洲的铸铁锅，主要原料是“生铁”，经由高炉还原、分离、冶炼，再浇注于模具中成形。唯一的缺点就是笨重，还需要“养锅”，但仍有很多人不嫌麻烦，入手了好几个——深锅、浅锅、烤盘、平底锅等。锅具优异的特性让人趋之若鹜：</p>
 <p><span style="color: #008000;"><strong>1. 可干煎</strong></span></p>
@@ -20,14 +20,14 @@
 <p><strong><span style="color: #008000;">2. 独特焦香味</span></strong><br />
 不同于其它较薄的锅具，使用铸铁锅烹煮食材较容易产生纳梅反应（Maillard reaction），表面形成褐色“焦糖化”——炒洋葱、蔬食的微焦甜味，烤面包的酥脆香气，焦糖烤布蕾的香脆糖衣，五花肉煎至焦褐色后再焖烧，不论做什么料理风味都很道地。</p>
 <figure id="attachment_13308521" aria-describedby="caption-attachment-13308521" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13308521-shutterstock_670109092.jpg"><img class="size-large wp-image-13308521" src="https://i.epochtimes.com/assets/uploads/2021/10/id13308521-shutterstock_670109092-600x400.jpg" alt="Fried,Chicken,Breasts,On,Vegetable,Oil,,Iron,Cast,Shutterstock,铸铁锅" width="600" b="400" /></a><figcaption id="caption-attachment-13308521" class="wp-caption-text">用铸铁锅煎烤肉块，有独特的焦香风味。（Shutterstock）</figcaption></figure>
-<figure id="attachment_13308524" aria-describedby="caption-attachment-13308524" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13308524-shutterstock_1192571623.jpg"><img class="size-large wp-image-13308524" src="https://i.epochtimes.com/assets/uploads/2021/10/id13308524-shutterstock_1192571623-600x400.jpg" alt="Roasted,Brussles,Sprouts,Shutterstock,铸铁锅" width="600" b="400" /></a><figcaption id="caption-attachment-13308524" class="wp-caption-text">铸铁锅高温将蔬菜焦糖化，这道“<ahref="https://github.com/lgxdpm367/djy/blob/master/gb/tag/%E9%93%81%E6%9D%BF%E7%83%A7.md#1">铁板烧</a>食蔬”美妙好滋味。（Shutterstock）</figcaption></figure>
+<figure id="attachment_13308524" aria-describedby="caption-attachment-13308524" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13308524-shutterstock_1192571623.jpg"><img class="size-large wp-image-13308524" src="https://i.epochtimes.com/assets/uploads/2021/10/id13308524-shutterstock_1192571623-600x400.jpg" alt="Roasted,Brussles,Sprouts,Shutterstock,铸铁锅" width="600" b="400" /></a><figcaption id="caption-attachment-13308524" class="wp-caption-text">铸铁锅高温将蔬菜焦糖化，这道“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%93%81%E6%9D%BF%E7%83%A7.md#1">铁板烧</a>食蔬”美妙好滋味。（Shutterstock）</figcaption></figure>
 <p><span style="color: #008000;"><strong>3. 无毒害</strong></span><br />
 不加珐琅涂层的铸铁锅厚实耐用，不怕高温或空烧，在料理过程中会释放铁质，补充人体所需。平日做好“养锅”就能形成光滑“油膜”类似“不沾锅”的效果，也不用担心一般不沾锅会有的涂层剥落问题。</p>
 <p><span style="color: #008000;"><strong>4. 优异热循环</strong></span><br />
 铸铁锅蓄热能力很强，盖上厚重锅盖形成热循环，达到超强锁水效果，完整保留食材原味，许多人觉得用铸铁锅做焖烧比闷烧锅做出来的更好吃，例如炖煮牛筋、牛腱，黑啤酒猪肋，卤白萝卜牛肚，港式油鸡或无水清蒸鱼等。</p>
 <p>铸铁锅炊饭超级好吃，加点植物油，米水比例约1:1.1静置30分钟，转中小火约5分钟沸腾后，冒出蒸气即转小火，煮约7分钟，没有浸泡过的米，煮约9分钟，然后关火焖15分钟，打开盖子就能享用“铸铁锅饭”。</p>
-<h2><span style="color: #800080;">★ <ahref="https://github.com/lgxdpm367/djy/blob/master/gb/tag/%E5%BC%80%E9%94%85.md#1">开锅</a>、养锅方法</span></h2>
-<p>有些品牌铸铁锅在出厂前已喷洒植物油，用高温电烧处理，将油脂烧进表面毛细孔中形成了防护，买回家后不需繁复“养锅”，只需用海棉和清水冲洗干净，放在炉上烘干，再用纸巾上一层薄薄食用油，小火烤约3—5分钟，关火冷却，<ahref="https://github.com/lgxdpm367/djy/blob/master/gb/tag/%E5%BC%80%E9%94%85.md#1">开锅</a>即完成！</p>
+<h2><span style="color: #800080;">★ <ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%80%E9%94%85.md#1">开锅</a>、养锅方法</span></h2>
+<p>有些品牌铸铁锅在出厂前已喷洒植物油，用高温电烧处理，将油脂烧进表面毛细孔中形成了防护，买回家后不需繁复“养锅”，只需用海棉和清水冲洗干净，放在炉上烘干，再用纸巾上一层薄薄食用油，小火烤约3—5分钟，关火冷却，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%80%E9%94%85.md#1">开锅</a>即完成！</p>
 <p>倘若购买的铸铁锅没有经过植物油养锅处理（Pre- seasoned），而是抹上防銹油、蜡等不可食用的涂层，那么开锅方法就和“养锅”的程序一样；或者每隔一段时间，当发现用纸巾擦拭微温铸铁锅会有黑黑的痕迹，那是植物油“油膜”分解、碳化的物质，吃进肚无害，按照“养锅”程序保养即可。</p>
 <p><strong><span style="color: #008000;">开锅、养锅步骤</span></strong></p>
 <p>1. 用细软钢刷或棕刷，加小苏打粉和清水刷洗锅具，重复3次。</p>
@@ -55,41 +55,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/1/27/n12715539.md#1">8道铸铁锅甜点食谱 一锅到底简单好料理</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/7/4/n13066327.md#1">“大古铸铁”因爱铸造  健康天然好味道</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/9/18/n13243178.md#1">【烟熏料理】不用烤炉 在家DIY烟熏棒棒腿</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/20/n13387288.md#1">研究揭示最好的踩水求生方法</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/27/n12715539.md#1">8道铸铁锅甜点食谱 一锅到底简单好料理</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/4/n13066327.md#1">“大古铸铁”因爱铸造  健康天然好味道</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/18/n13243178.md#1">【烟熏料理】不用烤炉 在家DIY烟熏棒棒腿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672607.md#1">珍惜时间 为自己活出璀璨人生</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/30/n10009267.md#1" target="_blank">林辉：相声演员马三立苦涩的“逗你玩”人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10624963.md#1" target="_blank">捡纸鸣冤、“反毛”凉鞋与“毛语录仗”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/22/n3688691.md#1" target="_blank">不再对强盗说“谢谢”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/10/31/n13343096.md#1">故乡见闻：“真疯”</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/13/n13373689.md#1">“眉寿”是指几岁高寿？典故为何和春酒有关？</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/22/n13391433.md#1">【新闻大家谈】3天让彭帅4露面 中共会抛张高丽？</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/20/n13388333.md#1">【横河观点】中国共产运动拐点 暴严重衰老迹象</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/8/n13362266.md#1">【思想领袖】无声之手如何影响言论自由</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/19/n13386820.md#1">党媒再发“彭帅照”难平众怒 恐冲击北京冬奥</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/21/n13389524.md#1">彭帅现身不足以解疑虑 法外长：让她自己说话</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同抚养小孩</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/21/n13389659.md#1">被爆与黄晓明公司切割 杨颖悄悄转投新东家</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/21/n13389860.md#1">《少年》香港禁映 导演：影片是通往自由的窗口</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/21/n13389553.md#1">孟耿如胎儿性别揭晓 黄子佼自曝凭直觉猜中</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/21/n13388603.md#1">美国加州公路上满地都是钞票 民众停车捡拾</a></li>
-<li><a href="https://github.com/lgxdpm367/djy/blob/master/gb/21/11/18/n13383514.md#1">你的腹肌有多强？做1个简单动作就知道</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lgxdpm367/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lgxdpm367/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/16/n13308435.htm">实用的开锅养锅秘诀 铸铁锅也能变身不沾锅</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/16/n13308435.htm">实用的开锅养锅秘诀 铸铁锅也能变身不沾锅</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lgxdpm367/djy/blob/master/gb/21/10/16/n13308435.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lgxdpm367/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lgxdpm367/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lgxdpm367/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lgxdpm367/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lgxdpm367/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/16/n13308435.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
